--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,2 +1,4 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Fraunces:opsz,wght@9..144,900&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Fraunces:opsz,wght@9..144,900&display=swap');
